fixed TestReflectionUtils to use a Java 8/11 safe method of loading a class from a URLClassLoader. GraphComparator test changed because deepEquals() compares based on value, not type when looking at numerics.